HT | 3.3 | #InputByCustmer_24Sept2022

--- a/contact.html
+++ b/contact.html
@@ -29,16 +29,16 @@
     	<div class="aline3">
         <!-- <p class="why">C/o, Akshar Engineers, Plot No - 2C, Survey No. 203, B/H. Inova Cast, Essen Road,</p>
 		 <p class="why">Veraval(Shapar), Dist - Rajkot (Gujarat).</p> -->
-        <p>Gat No. 195, Borhadewadi road, Chikhali, Pune - 412105</p>
+        <p>S3 Nation, Gat No. 195, Borhadewadi road, Chikhali, Pune - 412105</p>
         <p class="why" style="margin-top:20px;">T : +91 8792910960</p>
-		 <p class="why">E : <a href="mailto:s3nation@gmail.com">s3nation@gmail.com</a></p> 
+		 <p class="why">E : <a href="mailto:s3nation.pune@gmail.com">s3nation.pune@gmail.com</a></p> 
        </div>
     </div>
     <div id="redcontent">
         <div id="redcontent1">
            <div class="line1">What can we do for you?</div>
            <div class="line2">just drop as a mail</div>
-           <div class="line3"><a href="mailto:s3nation@gmail.com"><img src="images/mail.png" /></a></div>
+           <div class="line3"><a href="mailto:s3nation.pune@gmail.com"><img src="images/mail.png" /></a></div>
         </div>
     </div>
     
