--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title> Tools</title>
+<title> S3 Nation </title>
 <link rel="stylesheet" type="text/css" href="fonts/font.css">
 <link href="css/style.css" rel="stylesheet" type="text/css" />
     <style data-jss="" data-meta="MuiDialog">
@@ -161,7 +161,25 @@
     	<div class="c1">
         	<div class="c3">Welcome to S3 Nation</div>
            <div class="c5"></div>
-        	<div class="c4">With increasing demand for machines and allied tools, and to fill the gap of quality suppliers of industrial tools, we, S3 Nation. started dealing in different types of TURNING & MILLING TOOLS. Within a short period of time, our company has become one of the leading traders, suppliers, importers, and distributors of the same. Our range of products include TURNING TOOL HOLDERS, BORING BARS, GROOVING TOOL HOLDERS/BORING BARS, THREADING TOOL HOLDERS, BORING BARS, PRECISION TOOL HOLDERS (OEM Tool Holders) and many more. Our team of experts in our parent company check the quality of our products to ascertain, their acceptance in international market
+        	<div class="c4">
+            <p class="margin">
+              With increasing demand for machines and allied tools, and to fill the gap of quality
+              suppliers of industrial tools, we, S3 Nation started dealing in different types of TURNING & 
+              MILLING TOOLS. 
+            </p>
+            <p class="margin">
+              Within a short period of time, our company has become one of the leading traders, 
+              suppliers, importers, and distributors of the same. 
+            </p>
+            <p class="margin">
+              Our range of products include TURNING TOOL 
+              HOLDERS, BORING BARS, GROOVING TOOL HOLDERS/BORING BARS, THREADING TOOL HOLDERS, BORING BARS, 
+              PRECISION TOOL HOLDERS (OEM Tool Holders) and many more.
+            </p>
+            <p class="margin">
+              Our team of experts in our parent company check the quality of our products to ascertain, 
+              their acceptance in international market.
+            </p>
             </div>
 
         </div>
@@ -177,7 +195,7 @@
         <div id="redcontent1">
            <div class="line1">What can we do for you?</div>
            <div class="line2">just drop as a mail</div>
-           <div class="line3"><a href="mailto:s3nation@gmail.com"><img src="images/mail.png" /></a></div>
+           <div class="line3"><a href="mailto:s3nation.pune@gmail.com"><img src="images/mail.png" /></a></div>
         </div>
     </div>
     
@@ -193,8 +211,8 @@
         <div class="f2">Get Connected</div>
         <!-- <div class="f3">C/o, Akshar Engineers, Plot No - 2C, Survey No. 203, B/H. Inova Cast, Essen Road,</div>
         <div class="f4">Veraval(Shapar), Dist - Rajkot (Gujarat).</div> -->
-        <div class="f3">Gat No. 195, Borhadewadi road, Chikhali, Pune - 412105</div>
-        <div class="f5">T : +91 8792910960, E : <a href="#">s3nation@gmail.com</a></div>
+        <div class="f3">S3 Nation, Gat No. 195, Borhadewadi road, Chikhali, Pune - 412105</div>
+        <div class="f5">T : +91 8792910960, E : <a href="#">s3nation.pune@gmail.com</a></div>
     </div>
     <div class="ft">@ 2022. S3 Nation. All Rights Reserved.</div>
     
