--- a/productsdetail.html
+++ b/productsdetail.html
@@ -47,7 +47,7 @@
                     <div class="v7">All types of External Tool Holders for ISO Inserts</div>
                     <div class="v8">Shank Size :<span> 20 X 20, 25 X 25, 32 X 32</span></div>
                     <div class="v9">Contact :</div>
-                    <div class="v10">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
             <div class="v3"><img src="images/products/product1.jpg"/></div>
@@ -64,7 +64,7 @@
                     <div class="v7right">All types of External Tool Holders for ISO Inserts</div>
                     <div class="v8 m1">Shank Size : <span>8mm to 50mm</span></div>
                     <div class="v9 m1">Contact :</div>
-                    <div class="v10 m1">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10 m1">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
                     <div class="v7">All types of Special Tool Holders</div>
                     <div class="v8">Size :<span> Available in Custom Size</span></div>
                     <div class="v9">Contact :</div>
-                    <div class="v10">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
             <div class="v3"><img src="images/products/product1.jpg"/></div>
@@ -102,7 +102,7 @@
                     <div class="v7">All types of Trox Screw for ISO Inserts</div>
                     <div class="v8">Size :<span> M2.0 to M5.0</span></div>
                     <div class="v9">Contact :</div>
-                    <div class="v10">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
             <div class="v3"><img src="images/products/product3.jpg"/></div>
@@ -119,7 +119,7 @@
                     <div class="v7right">All types of Flag Key for Trox Screw</div>
                     <div class="v8 m1">Size : <span>T6, T8, T10, T15</span></div>
                     <div class="v9 m1">Contact :</div>
-                    <div class="v10 m1">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10 m1">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
                     <div class="v7">All types of Clamp for ISO Inserts</div>
                     <div class="v8">Size :<span> Available in Variant Size</span></div>
                     <div class="v9">Contact :</div>
-                    <div class="v10">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
             <div class="v3"><img src="images/products/product5.jpg"/></div>
@@ -151,7 +151,7 @@
                     <div class="v7right">All types of Shim for ISO Inserts</div>
                     <div class="v8 m1">Size : <span>Available in Variant Size</span></div>
                     <div class="v9 m1">contact :</div>
-                    <div class="v10 m1">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10 m1">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
                     <div class="v7">All types of Shim Pin for ISO Inserts</div>
                     <div class="v8">Shank Size :<span> Available in Variant Size</span></div>
                     <div class="v9">contact :</div>
-                    <div class="v10">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
             <div class="v3"><img src="images/products/product7.jpg"/></div>
@@ -190,7 +190,7 @@
                     <div class="v7right">All types of Soft Jaws for Chuck</div>
                     <div class="v8 m1">Size : <span>135mm, 165mm, 200mm, 250mm, 300mm</span></div>
                     <div class="v9 m1">contact :</div>
-                    <div class="v10 m1">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10 m1">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
         </div>
@@ -205,7 +205,7 @@
                     <div class="v7">All types of Turret Sleeves</div>
                     <div class="v8">Size :<span> 8mm, 10mm, 12mm, 16mm, 20mm, 25mm, 32mm</span></div>
                     <div class="v9">contact :</div>
-                    <div class="v10">For more detail please <a href="mailto:s3nation@gmail.com" class="clickhere">click here</a></div>
+                    <div class="v10">For more detail please <a href="mailto:s3nation.pune@gmail.com" class="clickhere">click here</a></div>
                 </div>
             </div>
             <div class="v3"><img src="images/products/product9.jpg"/></div>
@@ -218,7 +218,7 @@
         <div id="redcontent1">
            <div class="line1">What can we do for you?</div>
            <div class="line2">just drop as a mail</div>
-           <div class="line3"><a href="mailto:s3nation@gmail.com"><img src="images/mail.png" /></a></div>
+           <div class="line3"><a href="mailto:s3nation.pune@gmail.com"><img src="images/mail.png" /></a></div>
         </div>
     </div>
     
@@ -234,8 +234,8 @@
         <div class="f2">Get Connected</div>
         <!-- <div class="f3">C/o, Akshar Engineers, Plot No - 2C, Survey No. 203, B/H. Inova Cast, Essen Road,</div>
         <div class="f4">Veraval(Shapar), Dist - Rajkot (Gujarat).</div> -->
-        <div class="f3">Gat No. 195, Borhadewadi road, Chikhali, Pune - 412105</div>
-        <div class="f5">T : +91 8792910960, E : <a href="mailto:s3nation@gmail.com">s3nation@gmail.com</a></div>
+        <div class="f3">S3 Nation, Gat No. 195, Borhadewadi road, Chikhali, Pune - 412105</div>
+        <div class="f5">T : +91 8792910960, E : <a href="mailto:s3nation.pune@gmail.com">s3nation.pune@gmail.com</a></div>
     </div>
     <div class="ft">@ 2022. S3 Nation. All Rights Reserved.</div>
     
