--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <div id="redcontent1">
            <div class="line1">What can we do for you?</div>
            <div class="line2">just drop as a mail</div>
-           <div class="line3"><a href="mailto:s3nation@gmail.com"><img src="images/mail.png" /></a></div>
+           <div class="line3"><a href="mailto:s3nation.pune@gmail.com"><img src="images/mail.png" /></a></div>
         </div>
     </div>
     
@@ -79,8 +79,8 @@
         <div class="f2">Get Connected</div>
         <!-- <div class="f3">C/o, Akshar Engineers, Plot No - 2C, Survey No. 203, B/H. Inova Cast, Essen Road,</div>
         <div class="f4">Veraval(Shapar), Dist - Rajkot (Gujarat).</div> -->
-        <div class="f3">Gat No. 195, Borhadewadi road, Chikhali, Pune - 412105</div>
-        <div class="f5">T : +91 8792910960, E : <a href="mailto:s3nation@gmail.com">s3nation@gmail.com</a></div>
+        <div class="f3">S3 Nation, Gat No. 195, Borhadewadi road, Chikhali, Pune - 412105</div>
+        <div class="f5">T : +91 8792910960, E : <a href="mailto:s3nation.pune@gmail.com">s3nation.pune@gmail.com</a></div>
     </div>
     <div class="ft">@ 2022. S3 Nation. All Rights Reserved.</div>
     
