--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+<meta http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1">
 <title>Contact Us :: S3 Nation</title>
 <link rel="stylesheet" type="text/css" href="fonts/font.css">
 <link href="css/style.css" rel="stylesheet" type="text/css" />
