--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+<meta http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1">
 <title> S3 Nation </title>
 <link rel="stylesheet" type="text/css" href="fonts/font.css">
 <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -172,9 +173,9 @@
               suppliers, importers, and distributors of the same. 
             </p>
             <p class="margin">
-              Our range of products include TURNING TOOL 
-              HOLDERS, BORING BARS, GROOVING TOOL HOLDERS/BORING BARS, THREADING TOOL HOLDERS, BORING BARS, 
-              PRECISION TOOL HOLDERS (OEM Tool Holders) and many more.
+              Our range of products include CNC Tool Holders, CNC Boring Bars, VMC Adopters, Collets, Udrills, 
+              Indexable Endmills, Indexable Ballnose, Face Mill Cutters, Chamfer Tools, Pull studs, T Slot 
+              Cutters , Special Tools etc.
             </p>
             <p class="margin">
               Our team of experts in our parent company check the quality of our products to ascertain, 
