--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+<meta name="cf-2fa-verify" content="03fdaf6dbbbb54a">
 <meta http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1">
 <title> S3 Nation </title>
 <link rel="stylesheet" type="text/css" href="fonts/font.css">
